Fixed About Me page over stretching on mobile

--- a/style/aboutme-mobile.css
+++ b/style/aboutme-mobile.css
@@ -54,6 +54,8 @@
 
 #aboutme-page1-background {
     position: fixed;
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: 100%;
     background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,1)), url(/textures/env_map/guangzhou.jpg);
@@ -204,8 +206,10 @@
 */
 
 /* --------------------------------------------------------------------------------- Page 3 */
+/*
 #aboutme-page3 {
     position: absolute;
     top: 190vh;
     opacity: 1;
 }
+*/
